# 2_DB

./: README.md
Task_1/: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
Task_1/core/: settings.py
Task_1/models/: models.py
Task_2/: README.md  main.py  pyproject.toml
Task_2/core/: database.py
Task_2/crud/: crud.py
Task_2/models/: models.py
Task_2/utils/: utils.py
