[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pandas = "^2.2.3"
xlrd = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
mypy = "^1.14.0"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# black
[tool.black]
line-length = 79
extend-exclude = "migrations/"

# isort
[tool.isort]
profile = "black"
extend_skip_glob = ["migrations"]
known_local_folder=["core", "crud", "api", "models", "schemas", "tests", "main", "utils"]
line_length = 79
lines_after_imports = 2



[tool.pylint]
ignore = [".git", "__pycache__", "migrations", ".venv"]
max-line-length = 79
disable = ["C0114", "C0115", "C0116", "W1514", "W3101", "R0903", "C0103"]
